--- a/styles/basket.css
+++ b/styles/basket.css
@@ -315,6 +315,9 @@ footer {
   h3 {
     display: none;
   }
+  .cardTitle {
+    font-size: 15px;
+  }
 }
 
 @media (max-width: 992px) {
@@ -353,8 +356,21 @@ footer {
   .mainContent {
     flex-direction: column;
   }
+
+  .basket__title {
+    text-align: center;
+    flex-direction: column;
+    gap: 10px;
+  }
+
   .cardImg {
-    width: clamp(100px, 100px, 100px);
+    width: 75px;
+    height: 110px;
+  }
+  .cardImgInner {
+    min-width: 0;
+    width: 110px;
+    height: 140px;
   }
 
   .card__description {
