--- a/styles/chests.css
+++ b/styles/chests.css
@@ -254,6 +254,9 @@ footer {
   h3 {
     display: none;
   }
+  h2 {
+    font-size: 20px;
+  }
 }
 
 @media (max-width: 1450px) {
@@ -262,6 +265,11 @@ footer {
   }
 }
 @media (max-width: 992px) {
+
+  h2 {
+    font-size: 15px;
+  }
+
   .nav {
     height: auto;
     gap: 10px;
@@ -299,9 +307,10 @@ footer {
     justify-content: space-around;
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     margin: 0;
+    text-align: center;
   }
   #img1 {
     width: 100%;
@@ -317,9 +326,9 @@ footer {
     justify-content: space-around;
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    text-align: start;
+    text-align: center;
     margin: 0;
   }
   #img2 {
