--- a/styles/tables.css
+++ b/styles/tables.css
@@ -245,6 +245,9 @@ footer {
   h3 {
     display: none;
   }
+  h2 {
+    font-size: 20px;
+  }
 }
 
 @media (max-width: 1450px) {
@@ -290,9 +293,10 @@ footer {
     justify-content: space-around;
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     margin: 0;
+    text-align: center;
   }
   #img1 {
     width: 100%;
@@ -308,9 +312,9 @@ footer {
     justify-content: space-around;
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    text-align: start;
+    text-align: center;
     margin: 0;
   }
   #img2 {
